--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="search" translatable="false">Поиск</string>
     <string name="library" translatable="false">Медиатека</string>
     <string name="settings" translatable="false">Настройки</string>
-    <string name="tema">Темная тема</string>
+    <string name="tema" translatable="false">Темная тема</string>
+    <string name="send_app" translatable="false">Поделиться приложением</string>
+    <string name="help" translatable="false">Написать в поддрежку</string>
+    <string name="sogl" translatable="false">Пользовательское соглашение</string>
 </resources>
