Commit №2 - Добавление функционала в настройках - Верстка новой страницы в поисковик - Добавление функционала в поисковик - Добавлине стилей

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="settings" translatable="false">Настройки</string>
     <string name="tema" translatable="false">Темная тема</string>
     <string name="send_app" translatable="false">Поделиться приложением</string>
-    <string name="help" translatable="false">Написать в поддрежку</string>
+    <string name="help" translatable="false">Написать в поддержку</string>
     <string name="sogl" translatable="false">Пользовательское соглашение</string>
 </resources>
