Commit №5 - Создание истории нажатых треков Работа с ШерПрефересн

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="no_results" translatable="false">Ничего не нашлось</string>
     <string name="no_internet" translatable="false">Проблема со связью\n\nЗагрузка не удалась. Проверте подключение к интеренту</string>
     <string name="refresh" translatable="false">Обновить</string>
+    <string name="clear_button_searchHistory" translatable="false">Очистить историю</string>
+    <string name="text_searchHistory" translatable="false">Вы искали</string>
 </resources>
