--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="Duration">Длительность</string>
     <string name="media_playlist_zaglushka">Вы не создали\nни одного плейлиста</string>
     <string name="media_favorite_zaglushka">Ваша медиатека пуста</string>
+    <string name="play">Play</string>
+    <string name="pause">Pause</string>
 </resources>
